--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cloud_firestore: ^4.17.5
   firebase_auth: ^4.20.0
   firebase_storage: ^11.7.7
+  carousel_slider: ^4.2.1
 
 dev_dependencies:
   flutter_test:
