--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   firebase_auth: ^4.20.0
   firebase_storage: ^11.7.7
   carousel_slider: ^4.2.1
+  cached_network_image: ^3.3.1
+  rest_api: ^0.0.0
+  dotenv: ^4.2.0
+  pull_to_refresh_flutter3: ^2.0.2
 
 dev_dependencies:
   flutter_test:
@@ -78,10 +82,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  fonts:
-    - family: Jarohy
-      fonts:
-        - asset: fonts/Jarohy-Regular.ttf
+  # fonts:
+  #   - family: Jarohy
+  #     fonts:
+  #       - asset: fonts/Jarohy-Regular.ttf
         # - asset: fonts/Schyler-Italic.ttf
         #   style: italic
   #   - family: Trajan Pro
